# seedsigner-raspi-lvgl

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  README-dev.md  README.md  TODO.md  pyproject.toml  run_build.sh  setup.py  versions.lock.toml
.forgejo/workflows/: build.yml
.github/workflows/: base-image-build-publish.yml  build.yml  stageb-build.yml  stagec-build.yml  stagef-build.yml
cmake/toolchains/: armv6-rpi-linux-gnueabihf.cmake
docker/: Dockerfile  Dockerfile.ghcr  Dockerfile.python-armv6-base  Dockerfile.sdk  Dockerfile.stageb  Dockerfile.stagef-emu  build_base_image.sh  build_ghcr_base_image.sh  build_sdk_image.sh  build_steps.sh
docs/: architecture.md  ci-rebase-seedsigner-os-plan.md  dev-device-deployment.md  hardware-profile.md  input-button-behavior.md  interface-contract.md  language-support.md  lvgl-result-contract-spec.md  lvgl-v9-migration-plan.md  navigation-contract.md  pi-hardware-test.md  porting-boundary.md  production-parity-lock.md  python-abi-targets.md  rename-native-module.md  seedsigner-integration-plan.md  stagef-plan.md  toast-binding-contract.md
docs/abi/: dev-pi-abi.json  prod-pi-abi.inferred.json
docs/knowledge/: armv6-cross-compile-sdk.md  build-against-alternate-screens-tree.md  custom-large-icon-glyph-range.md  dice-keyboard-requires-icon-font.md  native-zbar-binary-mode-for-byte-qr.md  pi-dual-input-readers.md  pi-on-device-app-debugging.md  tiny-ttf-cache-needs-clib-malloc.md
native/camera/: camera_config.cpp  camera_config.h  camera_engine.cpp  camera_engine.h  camera_entropy_engine.cpp  camera_entropy_engine.h  camera_error.cpp  camera_error.h  camera_preview_sink.h  entropy_coordinator.cpp  entropy_coordinator.h  scan_coordinator.cpp  scan_coordinator.h  secure_zero.h  sha256_min.cpp  sha256_min.h
native/camera/probe/: stream_probe.cpp  zbar_decode_test.cpp
native/python_bindings/: CMakeLists.txt  camera_entropy.cpp  camera_preview.cpp  camera_scanner.cpp  display_st7789.cpp  gpio_input.cpp  gpio_lines.cpp  locale_packs.cpp  lvgl_runtime.cpp  module.c  module.cpp  module_internal.h  module_stub.c  result_queue.cpp  screens.cpp  stage_d_bridge.c  toast.cpp
native/screen_core_sanity/: CMakeLists.txt  main.cpp
scripts/: build-camera-probe.sh  build_in_docker.sh  build_python_armv6_base_in_docker.sh  build_stagec_in_docker.sh  build_stagef_emu_in_docker.sh  build_stagef_in_docker.sh  build_stagef_with_local_base.sh  capture_python_abi.py  ci-preflight.sh  deploy-dev.sh  extract-camera-sysroot.sh  pi_display_smoke.py  pi_gpio_mapping_diagnostic.py  pi_input_hardware_test.py  pi_input_smoke.py  pi_native_color_order_sweep.py  pi_native_driver_test_pattern.py  pi_native_lvgl_display_smoke.py  pi_native_lvgl_display_smoke_native_driver.py  stageb_build.sh  stagec_build.sh  stagec_build_in_docker.sh  stagef_build.sh  stagef_emu_build.sh
src/seedsigner_lvgl/: __init__.py  _queue.py
src/seedsigner_lvgl/platform/pi_zero/: __init__.py  buttons.py  input_events.py  st7789.py
tests/: pi_button_list_flow_smoke.py  pi_camera_preview_test.py  pi_i18n_locale_test.py  pi_input_hardware_test.py  pi_io_test_screen.py  pi_runtime_smoke.py  pi_screensaver_idle_test.py  run_pi_i18n_test.sh  run_pi_io_test.sh  test_all_screens_build.py  test_api_smoke.py  test_buttons_backend.py  test_native_module_smoke.py  test_native_smoke.py  test_st7789_backend.py  test_stagec_native_smoke.py  test_uur_smoke.py
